hphp/hack/test/pocket_universes/typing/decl2.bad.php.exp
File "decl2.bad.php", line 6, characters 14-17:
This is not an object of type KeyedContainer, this is an int (Typing[4005])
File "decl2.bad.php", line 6, characters 14-14:
Definition is here
