hphp/hack/test/pocket_universes/typing/decl2.bad.php
<?hh // strict
// KO: v mapped to an incorrect expression
class PU9 {
  enum X {
    case int v;
    :@X (v = 1[1]);
  }
}
